<resources>
    <string name="app_name">AgoraChat</string>
    <string name="loading">Loading&#8230;</string>
    <string name="request">requesting&#8230;</string>
    <string name="ok">Enter</string>
    <string name="Network_error">Network error</string>
    <string name="search_text_hint">Search</string>
    <string name="ease_sign_agora_id">AgoraID</string>
    <string name="ease_sign_nickname">Nickname</string>
    <string name="ease_sign_login">Log In</string>
    <string name="sign_error_illegal_character">Latin letters and numbers only.</string>
    <string name="sign_error_not_id">Please Enter a AgoraID.</string>
    <string name="error_network_error">当前网络不可用</string>
    <string name="error_not_login">未登录过环信</string>
    <string name="error_parse_error">解析错误</string>
    <string name="error_err_unknown">网络问题请稍后重试</string>
    <string name="err_image_android_min_version">上传图片只支持4.4版本以上</string>
    <string name="err_file_not_exist">文件不存在</string>
    <string name="error_add_self">不能添加自己</string>
    <string name="error_already_friend">此用户已是你的好友</string>
    <string name="error_already_friend_but_in_black">此用户已是你好友(被拉黑状态)，从黑名单列表中移出即可</string>
    <string name="error_delete_not_exist_msg">删除失败或不存在该消息</string>
    <string name="error_group_no_members">没有群组成员</string>
    <string name="error_user_already_exist">注册用户名已存在，请重新输入</string>
    <string name="error_delete_conversation">删除失败或不存在该对话</string>
    <string name="dialog_default_title">提示</string>
    <string name="main_title_home">Chats</string>
    <string name="main_title_contacts">Contacts</string>
    <string name="main_title_me">Me</string>
    <string name="contact_tab_title_friends">Friends</string>
    <string name="contact_tab_title_groups">Groups</string>
    <string name="contact_tab_title_requests">Requests</string>
    <string name="contact_request_notification_accept">Accept</string>
    <string name="group_member_add_admin">%1$s已成为新的管理员</string>
    <string name="group_member_remove_admin">%1$s已被移出管理员</string>
    <string name="group_member_add_black">%1$s已被添加至黑名单</string>
    <string name="group_member_remove_black">%1$s已被移出黑名单</string>
    <string name="group_member_mute">%1$s已被禁言</string>
    <string name="group_member_remove_mute">%1$s已被解除禁言</string>
    <string name="group_member_remove">%1$s已被移除</string>
    <string name="group_member_invite">已向%1$s发出入群邀请</string>
    <string name="group_destroy">群组已删除</string>
    <string name="group_role_owner">Group Owner</string>
    <string name="group_role_admin">Admin</string>
    <string name="group_permission_mute">Mute</string>
    <string name="group_admin_muted">Admin/Mute</string>
    <string name="group_new_group">New Group</string>
    <string name="group_authoried_to_join">Authorizated to join</string>
    <string name="group_join_a_group">Join a Group</string>
    <string name="group_join">Join</string>
    <string name="group_join_this_group">Join this Group</string>
    <string name="group_public_group_list">Public Group List</string>
    <string name="group_public_group">Public Group</string>
    <string name="group_apply">Apply</string>
    <string name="group_applying">Applying</string>
    <string name="group_applied">Applied</string>
    <string name="group_add_contacts">Add Contacts</string>
    <string name="group_add_members">Add Members</string>
    <string name="group_contacts">Contacts</string>
    <string name="group_name">Group Name</string>
    <string name="group_description">GROUP DESCRIPTION, NOT REQUIRED</string>
    <string name="group_maximum_member">MAXIMUM MEMBER</string>
    <string name="group_set_to_a_public_group">Set to a Public Group</string>
    <string name="group_no_more_than">No More Than 2000</string>
    <string name="group_allow_members_to_invite">Allow Members to Invite</string>
    <string name="em_public_group_information">公开群资料</string>
    <string name="group_owner">群主</string>
    <string name="em_public_group_introduce">简介</string>
    <string name="em_public_group_introduce_hint">暂无简介</string>
    <string name="em_public_group_verification_information">填写验证信息</string>
    <string name="em_public_group_request_to_join">请求加入</string>
    <string name="em_public_group_add">加入群聊</string>
    <string name="send_the_request_is">发送请求成功，等待群主同意</string>
    <string name="Join_the_group_chat">加入群聊成功</string>
    <string name="em_group_new_title">创建群组</string>
    <string name="em_group_new_save">完成</string>
    <string name="em_group_new_name">名称</string>
    <string name="em_group_new_name_hint">请输入群组名称</string>
    <string name="em_group_new_profile">简介</string>
    <string name="em_group_new_profile_hint">请输入群组简介</string>
    <string name="em_group_max_users">群组人数</string>
    <string name="em_group_set_max_users">群组人数</string>
    <string name="em_group_members">群组成员</string>
    <string name="em_group_new_if_public">是否公开群组</string>
    <string name="em_group_new_if_public_uncheck_hint">其他用户不能查找到此群</string>
    <string name="em_group_new_if_public_check_hint">其他用户可以查找到此群</string>
    <string name="em_group_new_open_invite">群成员是否有邀请权限</string>
    <string name="em_group_new_open_invite_uncheck_hint">只允许群主邀请用户进群</string>
    <string name="em_group_new_open_invite_check_hint">允许群成员邀请用户进群</string>
    <string name="em_group_new_need_owner_approval_public">加入是否需要验证</string>
    <string name="em_group_new_need_owner_approval_uncheck_hint">用户可以直接加入群组</string>
    <string name="em_group_new_need_owner_approval_check_hint">用户加入群组需要群主同意</string>
    <string name="em_group_new_name_cannot_be_empty">请完善请群信息</string>
    <string name="em_group_new_member_limit">群组人数范围3-3000人</string>
    <string name="em_group_new_success">群组创建成功</string>
    <string name="em_group_new_invite_join_group">%1$s邀请加入群：%2$s</string>
    <string name="show_agora_chat_id">AgoraID: %1$s</string>
    <string name="contact_detail_block_contact">Block Contact</string>
    <string name="contact_detail_delete_contact">Delete Contact</string>
    <string name="contact_detail_add_contact">Add Contact</string>
    <string name="contact_detail_start_chat">Chat</string>
    <string name="contact_detail_block_title">Block this contact now?</string>
    <string name="contact_detail_block_content">When you block this contact, you will not receive any messages from them.</string>
    <string name="contact_detail_block_confirm_text">Block</string>
    <string name="contact_detail_delete_title">Delete this contact now?</string>
    <string name="contact_detail_delete_content">Delete this contact and associated Chats.</string>
    <string name="contact_detail_delete_confirm_text">Delete</string>
    <string name="contact_add">Add</string>
    <string name="contact_adding">Adding</string>
    <string name="contact_added">Added</string>
    <string name="contact_add_contacts">Add Contacts</string>
    <string name="em_add_contact_item_button_text">添加好友</string>
    <string name="em_add_contact_item_button_text_added">已添加</string>
    <string name="em_add_contact_not_add_myself">不能添加自己</string>
    <string name="em_add_contact_user_already_in_contactlist">此用户已是你好友(被拉黑状态)，从黑名单列表中移出即可</string>
    <string name="em_add_contact_this_user_is_already_your_friend">此用户已是你的好友</string>
    <string name="em_add_contact_add_a_friend">加个好友呗</string>
    <string name="em_add_contact_send_successful">已发送好友邀请</string>
    <string name="account_logoff_notification">下线通知</string>
    <string name="account_connect_conflict">同一帐号已在其他设备登录</string>
    <string name="account_user_remove">此用户已被移除</string>
    <string name="account_user_forbidden">用户被服务器限制连接</string>
    <string name="demo_contact_listener_onContactAdded">您已经添加%1$s为好友</string>
    <string name="demo_contact_listener_onContactDeleted">您已删除好友%1$s</string>
    <string name="demo_contact_listener_onContactDeleted_by_other">%1$s已与您解除好友关系</string>
    <string name="demo_contact_listener_onContactInvited">%1$s希望和您成为好友，请通过</string>
    <string name="demo_contact_listener_onFriendRequestAccepted">您的好友申请已经通过</string>
    <string name="demo_contact_listener_onFriendRequestDeclined">%1$s已拒绝您的好友申请</string>
    <string name="multi_device_contact_accept">接受%s的好友邀请[remote]</string>
    <string name="multi_device_contact_decline">拒绝%s的好友邀请[remote]</string>
    <string name="multi_device_contact_add">发送好友邀请给%s[remote]</string>
    <string name="multi_device_contact_ban">加%s到黑名单[remote]</string>
    <string name="multi_device_contact_allow">移除%s从黑名单[remote]</string>
    <string name="multi_device_group_create">创建群组[remote]</string>
    <string name="multi_device_group_destroy">销毁群组[remote]</string>
    <string name="multi_device_group_join">加入群组[remote]</string>
    <string name="multi_device_group_leave">离开群组[remote]</string>
    <string name="multi_device_group_apply">申请加入群组[remote]</string>
    <string name="multi_device_group_apply_accept">接受%s入群申请[remote]</string>
    <string name="multi_device_group_apply_decline">拒绝%s入群申请[remote]</string>
    <string name="multi_device_group_invite">邀请%s加入群组[remote]</string>
    <string name="multi_device_group_invite_accept">接受%s入群邀请[remote]</string>
    <string name="multi_device_group_invite_decline">拒绝%s入群邀请[remote]</string>
    <string name="multi_device_group_kick">将%s从群组移除[remote]</string>
    <string name="multi_device_group_ban">将%s加入群组的黑名单[remote]</string>
    <string name="multi_device_group_allow">将%s从群组的黑名单移除[remote]</string>
    <string name="multi_device_group_block">停止接受群组消息[remote]</string>
    <string name="multi_device_group_unblock">可以接受群组的消息[remote]</string>
    <string name="multi_device_group_assign_owner">将群组所有者权限转移给%1$s[remote]</string>
    <string name="multi_device_group_add_admin">添加%s作为群组的管理员[remote]</string>
    <string name="multi_device_group_remove_admin">移除%s在群组的管理员身份[remote]</string>
    <string name="multi_device_group_add_mute">将%s在群组中禁言[remote]</string>
    <string name="multi_device_group_remove_mute">将%s在群组中解除禁言[remote]</string>
    <string name="demo_group_listener_onInvitationReceived">%1$s邀请您加入「%2$s」</string>
    <string name="demo_group_listener_onRequestToJoinReceived">%1$s请求加入「%2$s」</string>
    <string name="demo_group_listener_onRequestToJoinAccepted">%1$s已同意您加入「%2$s」</string>
    <string name="demo_group_listener_onRequestToJoinDeclined">%1$s已拒绝您加入「%2$s」的申请</string>
    <string name="demo_group_listener_onInvitationAccepted">您的加群邀请已经被%1$s接受</string>
    <string name="demo_group_listener_onInvitationDeclined">%1$s已拒绝您的加群邀请</string>
    <string name="demo_group_listener_onUserRemoved">您已被群管理员移出「%1$s」</string>
    <string name="demo_group_listener_onGroupDestroyed">群「%1$s」已被解散</string>
    <string name="demo_group_listener_onAutoAcceptInvitationFromGroup">您已加入「%1$s」</string>
    <string name="demo_group_listener_onMuteListAdded">%1$s已被群主禁言</string>
    <string name="demo_group_listener_onMuteListRemoved">%1$s已被群主恢复发言</string>
    <string name="demo_group_listener_onWhiteListAdded">%1$s已被群主添加进白名单</string>
    <string name="demo_group_listener_onWhiteListRemoved">%1$s已被群主移出白名单</string>
    <string name="chat_setting_clear">Clear Message History</string>
    <string name="chat_setting_mute_notification">Mute Notification</string>
    <string name="chat_setting_to_top">Sticky on Top</string>
    <string name="dialog_btn_cancel">Cancel</string>
    <string name="dialog_btn_confirm">OK</string>
    <string name="group_detail_disband_hint_confirm">Disband</string>
    <string name="group_detail_disband_hint_transfer">Transfer Ownership n’ Leave</string>
    <string name="me_setting_change_nickname">Change Nickname</string>
    <string name="about_title">About</string>
    <string name="about_sdk_version">SDK Version</string>
    <string name="about_lib_version">UI Library Version</string>
    <string name="about_policy">Legals n’ Policies</string>
    <string name="about_more">More</string>
    <string name="about_net_addr">Agora.io</string>
    <string name="dialog_change_nickname_reminder">Latin letters and numbers only</string>
</resources>