<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    xmlns:tools="http://schemas.android.com/tools">

    <TextView
        android:id="@+id/tv_content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:textSize="@dimen/text_size_normal"
        tools:text="content"
        android:textColor="@color/black"/>

    <Button
        android:id="@+id/btn_dialog_disband"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:background="@drawable/dialog_btn_left_selector"
        android:text="@string/group_detail_disband_hint_confirm"
        android:textSize="18sp"
        android:textColor="@color/color_alert"/>

    <Button
        android:id="@+id/btn_dialog_transfer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/dialog_btn_left_selector"
        android:text="@string/group_detail_disband_hint_transfer"
        android:textSize="18sp"
        android:textColor="@color/dialog_btn_text_color_selector"/>

    <Button
        android:id="@+id/btn_dialog_cancel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/dialog_btn_left_selector"
        android:text="@string/dialog_btn_cancel"
        android:textSize="18sp"
        android:textColor="@color/dialog_btn_text_color_selector"/>

</LinearLayout>