<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/shape_gray_80f2f2f2_corner_20"
    android:paddingTop="@dimen/margin_20">

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:text="@string/me_setting_change_nickname"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:textSize="@dimen/text_size_big_18"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <TextView
        android:id="@+id/tv_remind"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_2"
        android:text="@string/dialog_change_nickname_reminder"
        android:textColor="@color/black"
        android:textSize="@dimen/text_size_normal"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_title" />

    <EditText
        android:id="@+id/edt_target_nickname"
        android:layout_width="match_parent"
        android:layout_height="25dp"
        android:layout_marginLeft="@dimen/margin_15"
        android:layout_marginTop="@dimen/margin_15"
        android:layout_marginRight="@dimen/margin_15"
        android:background="@drawable/shape_white_corner_5"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:textSize="@dimen/text_size_normal"
        app:layout_constraintTop_toBottomOf="@id/tv_remind" />

    <ImageView
        android:id="@+id/iv_nickname_delete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/search_delete"
        app:layout_constraintBottom_toBottomOf="@id/edt_target_nickname"
        app:layout_constraintRight_toRightOf="@id/edt_target_nickname"
        app:layout_constraintTop_toTopOf="@id/edt_target_nickname" />

    <Button
        android:id="@+id/btn_dialog_cancel"
        android:layout_width="0dp"
        android:layout_height="45dp"
        android:background="@drawable/dialog_btn_left_selector_radius20"
        android:text="@string/dialog_btn_cancel"
        android:textColor="@color/dialog_btn_text_color_selector"
        android:textSize="17sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/btn_dialog_confirm"
        app:layout_constraintTop_toTopOf="@id/btn_dialog_confirm" />

    <Button
        android:id="@+id/btn_dialog_confirm"
        android:layout_width="0dp"
        android:layout_height="45dp"
        android:layout_marginTop="@dimen/margin_15"
        android:background="@drawable/dialog_btn_right_selector_radius20"
        android:text="@string/dialog_btn_confirm"
        android:textColor="@color/dialog_btn_text_color_selector"
        android:textSize="17sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toRightOf="@id/btn_dialog_cancel"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edt_target_nickname" />

</androidx.constraintlayout.widget.ConstraintLayout>